--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -3,7 +3,10 @@ replicaCount: 2
 
 image:
   repository: 767397666569.dkr.ecr.ap-northeast-2.amazonaws.com/kube-poc
-  pullPolicy: IfNotPresent
+  ## Always 항상 이미지 폴링 함
+  ## IfNotPresent 이미지가 없을 때만 폴링함
+  ## Never 이미지를 폴링하지 않음
+  pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
   tag: "latest"
 
