--- a/helm/templates/hpa.yaml
+++ b/helm/templates/hpa.yaml
@@ -1,3 +1,6 @@
+{{- if .Values.autoscaling.enabled }}
+apiVersion: autoscaling/v2beta1
+kind: HorizontalPodAutoscaler
 metadata:
   name: {{ include "hello.fullname" . }}
   labels:
